fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,8 +30,7 @@
 
 .laptop-wrapper {
   position: absolute;
-  height: 100%;
-  top: 15%;
+  top: 7%;
   right: 100px;
   width: 50rem;
   padding-bottom: 0;
